k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-inventory-deployment
  namespace: team3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: library-inventory
  template:
    metadata:
      labels:
        app: library-inventory
    spec:
      containers:
        - name: library-inventory
          image: orange18036/team3-library:222
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: library-volume
              mountPath: /app/data
      volumes:
        - name: library-volume
          persistentVolumeClaim:
            claimName: library-inventory-pvc
