k8s/prometheus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: team3
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"prometheus-server","namespace":"team3"},"spec":{"selector":{"app.kubernetes.io/component":"server","app.kubernetes.io/name":"prometheus"},"type":"LoadBalancer","ports":[{"name":"http-prometheus","port":9090,"protocol":"TCP","targetPort":9090}]}}
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: prometheus
  ports:
    - name: http-prometheus
      protocol: TCP
      port: 9090
      targetPort: 9090
