k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-inventory-service
  namespace: team3
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30000
  selector:
    app: library-inventory
